[package]
name = "erasure-coding"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[patch.crates-io]
scale-info = { git = "https://github.com/arkpar/scale-info.git" }

[dependencies]
blake2b_simd = { version = "1", default-features = false }
bounded-collections = { version = "0.1.9", default-features = false }
reed-solomon = { package = "reed-solomon-simd", git = "https://github.com/ordian/reed-solomon-simd", branch = "simd-feature" }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false,  features = ["derive"] }
thiserror = { version = "1.0.56", default-features = false }

[profile.dev]
panic = "abort"
opt-level = 1

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }
quickcheck = { version = "1.0.3", default-features = false }

[[bench]]
name = "all"
harness = false
